updated handlers and proto
